--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,9 +1,8 @@
 .content {
   display: flex;
   flex-direction: column;
-  width: 30%;
-  margin-top: 35%;
-  margin-bottom: 10%;
+  width: 35%;
+  margin-top: 25%;
   padding-left: 3%;
   padding-right: 3%;
 }
@@ -20,6 +19,7 @@
   font-size: 250%;
   line-height: 1.5;
   font-weight: 400;
+  padding-bottom: 1em;
   display: block;
 }
 
