--- a/src/components/PhotoGallery/gallery.css
+++ b/src/components/PhotoGallery/gallery.css
@@ -15,3 +15,10 @@
   max-width: 100%;
   max-height: 300px;
 }
+
+@media (max-width:650px) {
+  .image {
+    width: 150px;
+    max-height: 150px;
+  }
+}
