--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,14 @@
     align-items: center;
     margin-right: 5em;
     margin-left: 1em;
+    padding: 15px;
+    margin: 15px;
+}
+
+.logo-text {
+  border: 2px solid black;
+  border-right-width: 0;
+  padding: 10px;
 }
 
 @media (max-width: 640px - 1px) {
@@ -52,7 +60,7 @@ a {
   }
 
   .header {
-    padding: 20px 5px 5px;
+    padding: 50px 5px 5px; // header moest meer naar beneden
     padding-left: 7%;
     padding-right: 7%;
   }
@@ -62,6 +70,7 @@ a {
     margin-left: 0;
     margin-right: 0;
     margin: auto;
+    padding-top: 20px;
   }
 
   ul {
