--- a/src/components/Header/nav.css
+++ b/src/components/Header/nav.css
@@ -51,7 +51,7 @@ a:hover {
   margin-bottom: 5px;
   position: relative;
 
-  background: #cdcdcd;
+  background: black;
   border-radius: 3px;
 
   z-index: 1;
