make maatwerk extra contentful type

--- a/src/pages/basic.css
+++ b/src/pages/basic.css
@@ -5,6 +5,10 @@
   max-width: 1000px;
 }
 
+.one-column {
+  flex-direction: column;
+}
+
 /* landscape tablets and bigger */
 @media (min-width:862px) {
   .basic-container {
