--- a/src/layouts/css/index.css
+++ b/src/layouts/css/index.css
@@ -39,11 +39,12 @@ template {
 }
 a {
   background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+  outline-width: 0;
+  color:inherit;  
 }
 a:active,
 a:hover {
-  outline-width: 0;
+  font-weight: bolder;
 }
 abbr[title] {
   border-bottom: none;
