add margin to bottom of pages

--- a/src/layouts/css/custom-index.css
+++ b/src/layouts/css/custom-index.css
@@ -20,6 +20,7 @@ font-family: 'Cutive Mono', monospace;
   /* overflow-x: hidden; */
   margin-left: 5px;
   margin-right: 5px;
+  margin-bottom: 10em;
 }
 
 h1 {
