make header full page on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 .header {
     justify-content: space-around;
     align-content: center;
-    display: flex;
     padding-top: 20px;
     -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 1s; /* Firefox < 16 */
@@ -37,12 +36,6 @@
   padding: 10px;
 }
 
-@media (max-width: 640px - 1px) {
-    .logo {
-        justify-content: space-around;
-    }
-}
-
 .logo h4 {
     text-align: center;
     margin: 0;
@@ -63,6 +56,19 @@
     text-decoration: inherit;
 }
 
+/* smaller than landscape tablets */
+@media (max-width:1033px) {
+  .logo {
+    justify-content: space-around;
+}
+
+  .menu-div {
+    position: absolute;
+    top: 0;
+    right: 0;
+  } 
+}
+
 /* landscape tablets and bigger */
 @media (min-width:1033px) {
   .logo {
@@ -71,6 +77,7 @@
   }
 
   .header {
+    display: flex;
     padding: 50px 5px 5px; /* header moest meer naar beneden */
     padding-left: 7%;
     padding-right: 7%;
