--- a/src/components/Header/nav.css
+++ b/src/components/Header/nav.css
@@ -12,130 +12,137 @@ a:hover {
 
 /* smaller than landscape tablets */
 @media (max-width:1033px) {
-#menuToggle
-{
-  display: block;
-  position: relative;
+  #menuToggle
+  {
+    display: block;
+    position: relative;
 
-  z-index: 1;
+    z-index: 1;
 
-  -webkit-user-select: none;
-  user-select: none;
-}
+    -webkit-user-select: none;
+    user-select: none;
+  }
 
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
+  #menuToggle input
+  {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
 
-  cursor: pointer;
+    cursor: pointer;
 
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
 
-  -webkit-touch-callout: none;
-}
+    -webkit-touch-callout: none;
+  }
 
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
+  /*
+  * Just a quick hamburger
+  */
+  #menuToggle span
+  {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
 
-  background: black;
-  border-radius: 3px;
+    background: black;
+    border-radius: 3px;
 
-  z-index: 1;
-  flex: 1;
-  transform-origin: 4px 0px;
+    z-index: 1;
+    flex: 1;
+    transform-origin: 4px 0px;
 
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
 
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
+  #menuToggle span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
 
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
+  #menuToggle span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
 
-/*
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
+  /*
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+  #menuToggle input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
 
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
+  /*
+  * But let's hide the middle one.
+  */
+  #menuToggle input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
 
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
+  /*
+  * Ohyeah and the last one should go the other direction
+  */
+  #menuToggle input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
 
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu
-{
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -150px;
-  padding: 50px;
-  background: #fff;
-  opacity: 0.8;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
+  /*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
+  #menu
+  {
+    position: absolute;
+    width: 101vw;
+    height: 100vh;
+    margin-left: calc(-100vw + 66px);
+    margin-top: -57px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* margin: -100px 0 0 -150px; */
+    padding: 50px;
+    background: #fff;
+    opacity: 0.9;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
 
-  /* to stop flickering of text in safari */
+    /* to stop flickering of text in safari */
 
-  transform-origin: 0% 0%;
-  transform: translate(100%, 0);
+    transform-origin: 0% 0%;
+    transform: translate(100%, 0);
 
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
 
-/*
- * And let's slide it in from the left
- */
-#menuToggle input ~ ul {
-  visibility: hidden;
-}
+  /*
+  * And let's slide it in from the left
+  */
+  #menuToggle input ~ ul {
+    visibility: hidden;
+  }
 
-#menuToggle input:checked ~ ul
-{
-  visibility: visible;
-  transform: none;
-}
+  #menuToggle input:checked ~ ul
+  {
+    visibility: visible;
+    transform: none;
+  }
 }
 
 /* landscape tablets and bigger */
