--- a/src/layouts/css/custom-index.css
+++ b/src/layouts/css/custom-index.css
@@ -17,7 +17,7 @@ font-family: 'Cutive Mono', monospace;
 }
 
 .layout {
-  /* overflow-x: hidden; */
+  position: relative;
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 10em;
