--- a/src/components/PhotoGallery/gallery.css
+++ b/src/components/PhotoGallery/gallery.css
@@ -11,13 +11,24 @@
 
 .image {
   width: 300px;
+  margin: 10px;
   max-width: 100%;
   max-height: 300px;
 }
 
+.big-image {
+  width: 620px;
+  margin: 10px;
+  max-width: 100%;
+  max-height: 620px;
+}
+
+.photo-pair {
+  flex-direction: row;
+}
+
 .photo-zoom {
   overflow: hidden;
-  margin: 10px;
   position: relative;
   transition: all 0.5s ease-in-out;
 }
@@ -31,6 +42,11 @@
   .image {
     width: 150px;
     max-height: 150px;
+  }
+
+  .big-image {
+    width: 320px;
+    max-height: 320px;
   }
 }
 
