--- a/src/components/PhotoGallery/gallery.css
+++ b/src/components/PhotoGallery/gallery.css
@@ -33,17 +33,16 @@
   transition: all 0.5s ease-in-out;
 }
 
-  .photo-zoom:hover {
-    cursor: zoom-in;
-    opacity: 0.85;
-  }
+.photo-zoom:hover {
+  cursor: zoom-in;
+  opacity: 0.85;
+}
 
 @media (max-width:650px) {
   .image {
     width: 150px;
     max-height: 150px;
   }
-
   .big-image {
     width: 320px;
     max-height: 320px;
@@ -51,9 +50,70 @@
 }
 
 /* landscape tablets and bigger */
+
 @media (min-width:862px) {
   .gallerySection {
     max-width: 1000px;
     margin: auto;
   }
+}
+
+.close-button-container {
+  position: absolute;
+  top: 5%;
+  right: 5%
+}
+
+.modal-close {
+  display: block;
+  position: relative;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.modal-close input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  /* hide this */
+  z-index: 2;
+  /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+
+/*
+  * Just a quick hamburger
+  */
+
+.modal-close span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: black;
+  border-radius: 3px;
+  z-index: 1;
+  flex: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+}
+
+.modal-close input~span {
+  opacity: 1;
+  background: #232323;
+}
+
+.modal-close input~span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(-19px, -2px);
+}
+
+.modal-close input~span:last-child {
+  transform: rotate(45deg) translate(-17px, -2px);
 }
