--- a/src/components/PhotoGallery/gallery.css
+++ b/src/components/PhotoGallery/gallery.css
@@ -26,6 +26,10 @@
   flex-direction: row;
 }
 
+.photo-pair .image {
+  margin: 10px;
+}
+
 .photo-zoom {
   overflow: hidden;
   position: relative;
